[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pi_rest"
description = "Raspberry Pi Rest Package"
readme = "README.md"
keywords = ["Pi", "REST"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",

]
dependencies = [
    "flask>=2.3.2",
    "flask_cors>=3.0.10",
]
dynamic = ["version"]

[tool.setuptools]

[tool.setuptools_scm]
write_to = "_version.py"
